CDPD-50040: [frontend] fix for jobbrowser table to handle horizontal overflow (#3236)
(cherry picked from commit 61609775dfdedeb3707e018b608b4a340cbe14c5)
(cherry picked from commit f2e7c6a16ff9727ec5290adf28d5904e81ba5261)
(cherry picked from commit aaee868dbc4f73ecd18cbf1c2cc0161ab4843343)

--- a/apps/jobbrowser/src/jobbrowser/static/jobbrowser/less/jobbrowser-embeddable.less
+++ b/apps/jobbrowser/src/jobbrowser/static/jobbrowser/less/jobbrowser-embeddable.less
@@ -400,3 +400,12 @@
     position: relative;
   }
 }
+
+.hue-jobs-table > tbody > tr > td:last-child {
+  min-width: 50px;
+  word-break: break-all;
+}
+
+.hue-horizontally-scrollable {
+  overflow-x: auto;
+}
